<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 질주 시작 + 타이머 -->
    <LinearLayout
        android:id="@+id/layout_run_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_run_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_run_fast"
            android:textSize="@dimen/font_title_width"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textview_run_lefttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_timer"
            android:textSize="@dimen/font_norm_height"/>
    </LinearLayout>

    <!-- 최대 할인율/최소 할인율 -->
    <LinearLayout
        android:id="@+id/layout_run_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_run_timer">

        <!-- 최대 할인율 -->
        <TextView
            android:id="@+id/textview_max_dicount_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kor_max"/>
        <TextView
            android:id="@+id/textview_max_dicount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/msg_blank"
            android:textColor="@color/colorPlus"
            android:textSize="@dimen/font_norm_width" />
        <!-- slash -->
        <TextView
            android:id="@+id/textview_total_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/str_slash"
            android:textSize="@dimen/font_norm_width" />
        <!-- 최소 할인율 -->
        <TextView
            android:id="@+id/textview_min_dicount_unit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kor_min"/>
        <TextView
            android:id="@+id/textview_min_dicount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/msg_blank"
            android:textSize="@dimen/font_norm_width" />
        <!-- "할인 가능" 메시지 -->
        <TextView
            android:id="@+id/textview_unit_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/msg_discount" />
    </LinearLayout>

    <!-- 달리는 소년 -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_view_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/runman"/>

</androidx.constraintlayout.widget.ConstraintLayout>